[package]
name = "client"
version = "0.1.0"
edition = "2021"
license = "MPL2"
[dependencies]
console_error_panic_hook = "0.1.7"
gloo = "0.9.0"
gloo-net = "0.3.1"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.180"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
yew-more-hooks = { version = "0.1.2", features = ["yew-hooks"] }
wasm-bindgen-futures = "0.4"
uuid = { version = "1.4.1", features = ["v1"] }
yewdux = "0.9.3"
yewdux-input = "0.1.0"
popper-rs = {version = "0.1.0-alpha.4", features = ["yew", "debug"]}
patternfly-yew = {version = "0.5.0-alpha.2", features = ["icons-fab"]}
browser-panic-hook = "0.2.0"
yew-nested-router = "0.2.2"
wasm-bindgen = "0.2.87"
strum = "0.25.0"
gloo-utils = "0.1.5"
[dev-dependencies]
js-sys = "0.3"
wasm-bindgen-test = "0.3"
gloo-utils = "0.1.5"
[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlElement",
    "HtmlInputElement"
]