[package]
name = "server"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "nas-t-web-server"
path = "main.rs"
[dependencies]
axum = "0.6.19"
axum-extra = "0.7.5"
clap = { version = "4.3.19", features = ["derive"] }
futures = "0.3.28"
log = "0.4.19"
tokio = { version = "1.29.1", features = ["full"] }
tower = {version = "0.4.13",features = ["util"]}
tower-http = { version = "0.4.3", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17",features = ["env-filter"]}
