[package]
name = "ui"
version = "0.1.0"
edition = "2021"
[dependencies]
console_error_panic_hook = "0.1.7"
gloo = "0.9.0"
gloo-net = "0.3.1"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.180"
wasm-logger = "0.2.0"
ybc = "0.4.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
yew-router = "0.17.0"
wasm-bindgen-futures = "0.4"
# [dependencies.web-sys]
# version = "0.3"
# features = [
#   "Document",
#   "Element",
#   "Node",
#   "Window",
#   "HtmlCollection",
#   "HtmlInputElement",
# ]
[dev-dependencies]
js-sys = "0.3"
wasm-bindgen-test = "0.3"
gloo-utils = "0.1.5"
